# Orchestrix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODING_STANDARDS.md  DESIGN_SYSTEM.md  README.md  RELEASING.md  SETUP.md  SKILLS_GUIDE.md  SUB_AGENTS_SPEC.md  TROUBLESHOOTING.md  UX_PRINCIPLES.md  components.json  index.html  index.landing.html  package.json  shadcn-tailwind4-guide.md  skills-lock.json  vite.config.ts  vite.landing.config.ts
docs/: DESIGN_SYSTEM.md  (+11 more)
src-tauri/: Cargo.toml  tauri.benchmark.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  testing.rs
src-tauri/src/bench/: agentic_coding.rs  business_ops.rs  core.rs  diagram.rs  embeddings.rs  llm.rs  mod.rs  simulation.rs  suite.rs
src-tauri/src/bus/: batcher.rs  event_bus.rs  event_types.rs  mod.rs
src-tauri/src/commands/: agent_presets.rs  approvals.rs  benchmarks.rs  context.rs  embeddings.rs  execution.rs  mcp.rs  messages.rs  mod.rs  plan_mode.rs  providers.rs  questions.rs  runs.rs  skills.rs  suggestions.rs  tasks.rs  workspace.rs  workspace_skills.rs  worktrees.rs
src-tauri/src/core/: mcp.rs  mod.rs  plan.rs  preferences_memory.rs  prompt_references.rs  skills.rs  tool.rs  workspace_skills.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  tests.rs
src-tauri/src/embeddings/: config.rs  error.rs  factory.rs  gpu_probe.rs  indexer.rs  manager.rs  mod.rs  tests.rs  transformers_bridge.mjs  types.rs
src-tauri/src/mcp/: client.rs  connection.rs  connection_test.rs  events.rs  filtering.rs  jsonrpc.rs  mod.rs  transport.rs  types.rs  types_test.rs
src-tauri/src/model/: catalog.rs  kimi.rs  minimax.rs  mod.rs  provider.rs  shared.rs  traits.rs  types.rs
src-tauri/src/policy/: mod.rs  tests.rs
src-tauri/src/runtime/: approval.rs  artifacts.rs  mod.rs  plan_mode_settings.rs  planner.rs  prompt_suggestion.rs  questions.rs  recovery.rs  summarization.rs  tests.rs  tool_calling.rs  worktree.rs  worktree_tests.rs
src-tauri/src/tests/: agentic.rs  diagram.rs  events.rs  glm_integration_tests.rs  integration.rs  mod.rs  providers.rs  tools.rs
src-tauri/src/tools/: agent.rs  args.rs  canvas.rs  cmd.rs  dev_server.rs  file_search.rs  fs.rs  git.rs  memory.rs  mod.rs  registry.rs  search.rs  semantic_search.rs  skills.rs  tests.rs  types.rs  web_snapshot.rs
src-tauri/tests/: mcp_integration_test.rs  provider_usage_live.rs
src-tauri/tests/common/: mock_mcp_server.rs  mock_transport.rs  mod.rs
(+204 files in other folders)
