[package]
name = "orchestrix"
version = "0.1.0"
description = "Lightweight AI agent management desktop app"
authors = ["ghost"]
edition = "2021"
default-run = "orchestrix"

[lib]
name = "orchestrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
futures = "0.3"
headless_chrome = { version = "1.0", default-features = false, features = ["fetch"] }
dashmap = "6"
fastembed = { version = "5.9.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
sysinfo = "0.33"
similar = "2"
ignore = "0.4"
nucleo-matcher = "0.3"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1.4"
httpmock = "0.7"
